// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`profile-flyout/presenters/ProfileContentPresenter  1`] = `
.emotion-0 {
  font-family: ArtifaktElement;
  line-height: 1.6;
  box-sizing: border-box;
  padding: 10px;
}

<div
  className="emotion-0"
/>
`;

exports[`profile-flyout/presenters/ProfileContentPresenter  2`] = `
.emotion-1 {
  font-family: ArtifaktElement;
  line-height: 1.6;
  box-sizing: border-box;
  padding: 10px;
}

.emotion-0 {
  display: block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  font-size: 16px;
  font-weight: bold;
  line-height: 24px;
  color: #222934;
}

<div
  className="emotion-1"
>
  <span
    className="emotion-0"
  >
    Pete Parker
  </span>
</div>
`;

exports[`profile-flyout/presenters/ProfileContentPresenter  3`] = `
.emotion-1 {
  font-family: ArtifaktElement;
  line-height: 1.6;
  box-sizing: border-box;
  padding: 10px;
}

.emotion-0 {
  display: block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  font-size: 12px;
  line-height: 16px;
  color: #666;
}

<div
  className="emotion-1"
>
  <span
    className="emotion-0"
  >
    spyder-man@autodesk.com
  </span>
</div>
`;

exports[`profile-flyout/presenters/ProfileContentPresenter  4`] = `
.emotion-2 {
  font-family: ArtifaktElement;
  line-height: 1.6;
  box-sizing: border-box;
  padding: 10px;
}

.emotion-0 {
  display: block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  font-size: 16px;
  font-weight: bold;
  line-height: 24px;
  color: #222934;
}

.emotion-1 {
  display: block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  font-size: 12px;
  line-height: 16px;
  color: #666;
}

<div
  className="emotion-2"
>
  <span
    className="emotion-0"
  >
    Pete Parker
  </span>
  <span
    className="emotion-1"
  >
    spyder-man@autodesk.com
  </span>
  <span />
</div>
`;
